# midas

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake-multi-platform.yml  cmake.yml
apps/: CMakeLists.txt  backtest.cpp  main.cpp
apps/include/: backtest.hpp
apps/midas/: CMakeLists.txt  backtest.cpp  broker_factory.cpp  decision_params_view.cpp  main.cpp  profit_and_loss_window.cpp  trader_context.cpp  trader_view.cpp  ui-component.cpp  ui.cpp  ui_main_loop.cpp
apps/midas-gui/: CMakeLists.txt  main.cpp
apps/midas/include/backtest/: momentum_trader.hpp
apps/midas/include/broker/: broker_factory.hpp  trader_context.hpp
apps/midas/include/terminal-ui/: decision_params_view.hpp  profit_and_loss_window.hpp  teriminal.hpp  trader_view.hpp  ui-component.hpp
include/backtest/: backtest.hpp
include/broker-interface/: broker.hpp  instruments.hpp  order.hpp  order_printer.hpp  order_summary.hpp  position_tracker.hpp  subscription.hpp  trades_summary.hpp
include/data/: bar.hpp  data_stream.hpp  export.hpp
include/exceptions/: network_error.hpp  order_parameter_error.hpp  order_state_error.hpp  sampling_error.hpp  subscription_error.hpp
include/gui/: gui.hpp
include/ibkr-driver/: ibkr.hpp  known_contracts.hpp  known_symbols.hpp  subscription.hpp
include/logging/: logging.hpp
include/midas/: instruments.hpp  timezones.hpp  version.h.in
include/observers/: observers.hpp
include/signal-handling/: signal-handler.hpp
include/trader/: base_trader.hpp  macd_trader.hpp  mean_reversion_trader.hpp  momentum_trader.hpp  trader.hpp  trader_context.hpp  trader_data.hpp
libs/: CMakeLists.txt
libs/backtest/: CMakeLists.txt  backtest.cpp  manager.cpp  operators.cpp
libs/backtest/include/: backtest_order_manager.hpp
libs/backtest/tests/: CMakeLists.txt  simulation_order_transmitter_tests.cpp
libs/broker/: CMakeLists.txt  bar_import.cpp  broker_factory.cpp  data_stream.cpp  data_stream_export.cpp  exchange.cpp  order_manager.cpp  position_tracker.cpp  timezones.cpp
libs/broker/tests/: CMakeLists.txt  bar_test.cpp  exchange_test.cpp  position_tracker_tests.cpp
libs/exceptions/: CMakeLists.txt
libs/gui/: CMakeLists.txt  backtest_widget.cpp  main_window.cpp  new_trader_dialog.cpp  pnl_widget.cpp  start_gui.cpp  trader_widget.cpp
libs/gui/include/: backtest_widget.hpp  main_window.hpp  new_trader_dialog.hpp  pnl_widget.hpp  trader_widget.hpp
libs/ibkr-driver/: CMakeLists.txt  README.md  account.cpp  active_sub_state.cpp  bar_conversion.cpp  build_contracts.cpp  client.cpp  connectivity_state.cpp  contract.cpp  data_requests.cpp  driver.cpp  errors.cpp  historical_data.cpp  ibkr.cpp  native_order.cpp  order.cpp  order_execution.cpp  order_manager.cpp  subscription.cpp  subscriptions.cpp  ticks.cpp  transform_order.cpp
libs/ibkr-driver/include/ibkr/internal/: active_subscription_state.hpp  bar_conversion.hpp  build_contracts.hpp  client.hpp  connectivity_state.hpp  ewrapper_decl_and_stubs.hpp  historical.hpp  ibkr_order_manager.hpp  order_wrapper.hpp
libs/ibkr-driver/tests/: CMakeLists.txt  bar_conversion_tests.cpp  build_futures_contract_tests.cpp  execution_entry_tests.cpp  native_order_tests.cpp  transform_order_tests.cpp
libs/logging/: CMakeLists.txt  logging.cpp
libs/order/: CMakeLists.txt  bracketed_order.cpp  operators.cpp  order.cpp  order_printer.cpp  simple_order.cpp  summary_tracker.cpp
libs/order/include/: bracketed_order_state.hpp
libs/signal-handling/: CMakeLists.txt  handler.cpp
libs/subscription/: CMakeLists.txt  subscription.cpp
libs/trader/: CMakeLists.txt  base_trader.cpp  macd_trader.cpp  mean_reversion_trader.cpp  momentum_factory.cpp  momentum_trader.cpp  stock_momentum_trader.cpp  trader.cpp  trader_context.cpp  trader_data.cpp  trader_factory.cpp
libs/trader/tests/: CMakeLists.txt  base_trader_tests.cpp  momentum_trader_tests.cpp  trader_data_tests.cpp  trader_sampling_tests.cpp
pine_script_samples/: 2_min_momentum.pinescript  2min_momentum_limits.pinescript
